--- a/.ebextensions/common.config
+++ b/.ebextensions/common.config
@@ -1,16 +1,16 @@
 packages:
   yum:
-	strace: []
-	htop: []
-	git: []
-	sysstat: []
-	tcpdump: []
-	nscd: []
+    strace: []
+    htop: []
+    git: []
+    sysstat: []
+    tcpdump: []
+    nscd: []
 
 commands:
   "enable nscd":
-	command: chkconfig nscd on
+    command: chkconfig nscd on
   "start nscd":
-	command: service nscd start
+    command: service nscd start
 
-
+#set ts=2 sts=2 sw=2 expandtab$
